--- a/vrhome.html
+++ b/vrhome.html
@@ -14,24 +14,53 @@
       <!--Room1-->
       <a-entity id="vrhome" position="0 -1 0" visible="true">
         <a-gltf-model src="#HomeVR" scale="1 1 1"></a-gltf-model>
-        <!--Room1-->
-        <a-box
-          color="red"
-          position="-5 1 -2"
-          scale="0.5 0.5 0.5"
-          onclick="scene_2()">
-          <a-text
-            value="Click box to teleport to garage"
-            rotation="0 90 0"
-            position="0 1 1"></a-text>
-        </a-box>
       </a-entity>
+      <a-text value="VR Menu" position="-2 1.5 -6" color="black"> </a-text>
+
+      <!--Room1-->
+      <a-entity id="vrhome" position="0 -1 0" visible="true">
+        <a-gltf-model src="#HomeVR" scale="1 1 1"></a-gltf-model>
+      </a-entity>
+      <a-text value="Welcome to the Room" position="-2 1.5 -6" color="black">
+      </a-text>
 
       <!--Player viewport-->
-      <a-camera position="0 0w 0">
+      <a-camera position="0 0 0" rotation="190 180 0">
         <!--Cursor Circle-->
         <a-cursor color="red"></a-cursor>
       </a-camera>
+
+      <!-- Buttons within the scene -->
+      <a-entity position="-2 1 -3">
+        <a-text value="Scene 1" color="black"></a-text>
+        <a-plane
+          color="blue"
+          width="2"
+          height="1"
+          depth="0.1"
+          onclick="scene_1()"></a-plane>
+      </a-entity>
+
+      <a-entity position="0 1 -3">
+        <a-text value="Scene 2" color="black"></a-text>
+        <a-plane
+          color="green"
+          width="2"
+          height="1"
+          depth="0.1"
+          onclick="scene_2()"></a-plane>
+      </a-entity>
+
+      <a-entity position="2 1 -3">
+        <a-text value="Scene 3" color="black"></a-text>
+        <a-plane
+          color="red"
+          width="2"
+          height="1"
+          depth="0.1"
+          onclick="scene_3()"></a-plane>
+      </a-entity>
+      <!-- Add more buttons for other scenes as needed -->
     </a-scene>
 
     <!--Scene switch script-->
@@ -40,7 +69,6 @@
       function vrhome() {
         document.getElementById("vrhome").setAttribute("visible", "true");
       }
-
       // Teleport to scene two
       function scene_2() {
         document.getElementById("vrhome").setAttribute("visible", "false");
