--- a/vrhome.html
+++ b/vrhome.html
@@ -13,77 +13,139 @@
         id="HomeVR"
         src="/assets/classroom_merged.glb"></a-asset-item>
 
-      <!-- Scene 1 - VR Menu -->
-      <a-entity id="vrmenu" position="0 -1 0" visible="true">
-        <a-gltf-model src="#HomeVR" scale="1 1 1"></a-gltf-model>
-        <a-text value="VR Menu" position="-2 1.5 -6" color="black"></a-text>
+      <a-entity id="vrmenu" position="0 -1 0" visible="">
+        <a-gltf-model
+          src="#HomeVR"
+          scale=""
+          gltf-model="/assets/classroom_merged.glb"></a-gltf-model>
+        <a-text
+          value="VR Menu"
+          position="-4.69 2.08 0.43"
+          color="black"
+          text=""
+          rotation="0 90 0"></a-text>
 
         <!-- Buttons within the scene -->
-        <a-entity position="-5 1.5 0.5">
-          <a-text value="Hub" color="black"></a-text>
+        <a-entity
+          position="-4.708 1.22 3.13"
+          rotation="0 90 0"
+          scale="2.15 0.7 1">
+          <a-text
+            value="Hub"
+            color="black"
+            text="color: #ffffff"
+            scale="0.67 1.27 1.73"
+            position="-0.14 -0.03 0"></a-text>
           <a-plane
             color="blue"
             width="0.5"
             height="0.5"
             depth="0.1"
-            onclick="scene_1()"></a-plane>
+            onclick="scene_1()"
+            material="color: #800080; emissive: #000000"
+            geometry="height: 0.53"></a-plane>
         </a-entity>
 
-        <a-entity position="-5 1 1">
-          <a-text value="Extension" color="black"></a-text>
+        <a-entity position="-4.61 1.73 2.71" rotation="0 90 0" scale="1 1 1.03">
+          <a-text
+            value="Extension"
+            color="black"
+            text="color: #ffffff"
+            position="0.01 -0.02 -0.05"></a-text>
           <a-plane
             color="green"
             width="0.5"
             height="0.5"
             depth="0.1"
-            onclick="scene_2()"></a-plane>
+            onclick="scene_2()"
+            material=""
+            geometry=""
+            position="0.52 -0.04 -0.07"
+            scale="2.06 0.59 0.14001"></a-plane>
         </a-entity>
 
-        <a-entity position="-5 0.5 1.5">
-          <a-text value="Keyworth" color="black"></a-text>
+        <a-entity position="-4.71 1.18 0.84" rotation="0 90 0">
+          <a-text
+            value="Keyworth"
+            color="black"
+            text="color: #ffffff"
+            position="-0.2 0.03 0"
+            scale=""></a-text>
           <a-plane
             color="red"
             width="0.5"
             height="0.5"
             depth="0.1"
-            onclick="scene_3()"></a-plane>
+            onclick="scene_3()"
+            material=""
+            geometry=""
+            position="0.27 0.02 0"
+            scale="2.01 0.61 1.53"></a-plane>
         </a-entity>
 
-        <!-- New buttons -->
-        <a-entity position="-5 0 2">
-          <a-text value="Robot" color="black"></a-text>
+        <a-entity position="-4.72 1.31 -1.91" rotation="0 90 0">
+          <a-text
+            value="Robot"
+            color="black"
+            text="color: #ffffff"
+            position="-0.42 -0.13 0.01"
+            scale=""></a-text>
           <a-plane
             color="yellow"
             width="0.5"
             height="0.5"
             depth="0.1"
-            onclick="scene_4()"></a-plane>
+            onclick="scene_4()"
+            material=""
+            geometry=""
+            position="-0.1 -0.12 0"
+            scale="1.38 0.7 1"></a-plane>
         </a-entity>
-
         <a-entity position="-5 -0.5 2.5">
-          <a-text value="Faraday" color="black"></a-text>
+          <a-text value="Faraday" color="black" text=""></a-text>
           <a-plane
             color="orange"
             width="0.5"
             height="0.5"
             depth="0.1"
-            onclick="scene_5()"></a-plane>
+            onclick="scene_5()"
+            material=""
+            geometry=""></a-plane>
         </a-entity>
-
-        <a-entity position="-5 -1 3">
-          <a-text value="Return Home" color="black"></a-text>
+        <a-entity position="-4.72 1.67 -0.37" rotation="0 90 0">
+          <a-text value="Faraday" color="black" text="color: #ffffff"></a-text>
+          <a-plane
+            color="orange"
+            width="0.5"
+            height="0.5"
+            depth="0.1"
+            onclick="scene_5()"
+            material=""
+            geometry=""
+            position="0.41 0 0"
+            scale="1.76 0.62 1"></a-plane>
+        </a-entity>
+        <a-entity position="-4.663 1.73 -2.4" rotation="0 90 0">
+          <a-text
+            value="Return Home"
+            color="black"
+            text="color: #ffffff"
+            position="0.08 0 0"></a-text>
           <a-plane
             color="purple"
             width="0.5"
             height="0.5"
             depth="0.1"
-            onclick="scene_6()"></a-plane>
+            onclick="scene_6()"
+            material="color: #00ff40"
+            geometry=""
+            position="0.72 -0.01 0"
+            scale="2.86 0.6 1"></a-plane>
         </a-entity>
       </a-entity>
 
-      <!-- Player viewport -->
-      <a-camera position="-0.139 0.640 -0.303" rotation="0 90 0">
-        <!-- Cursor Circle -->
+      <a-camera position="1.20065 0.49281 -0.39881" rotation="0 90 0">
+        <!--Cursor Circle-->
         <a-cursor color="red"></a-cursor>
       </a-camera>
     </a-scene>
