--- a/vrhome.html
+++ b/vrhome.html
@@ -25,7 +25,7 @@
           text=""
           rotation="0 90 0"></a-text>
 
-        <!-- Buttons within the scene -->
+        <!-- Hub -->
         <a-entity
           position="-4.708 1.22 3.13"
           rotation="0 90 0"
@@ -41,11 +41,19 @@
             width="0.5"
             height="0.5"
             depth="0.1"
-            onclick="scene_1()"
+            onclick="navigateToNewEnvironment()"
             material="color: #800080; emissive: #000000"
             geometry="height: 0.53"></a-plane>
         </a-entity>
 
+        <!-- JavaScript function for Hub -->
+        <script>
+          function navigateToNewEnvironment() {
+            window.location.href = "1hub.html"; // Replace '1hub.html' with the URL of your destination page
+          }
+        </script>
+
+        <!-- Extension -->
         <a-entity position="-4.61 1.73 2.71" rotation="0 90 0" scale="1 1 1.03">
           <a-text
             value="Extension"
@@ -57,13 +65,22 @@
             width="0.5"
             height="0.5"
             depth="0.1"
-            onclick="scene_2()"
+            onclick="goToExtension()"
             material=""
             geometry=""
             position="0.52 -0.04 -0.07"
             scale="2.06 0.59 0.14001"></a-plane>
         </a-entity>
 
+        <!-- JavaScript function for Extension -->
+        <script>
+          function goToExtension() {
+            // Define the action you want to perform when clicked, like navigating to a new page
+            window.location.href = "2extension.html";
+          }
+        </script>
+
+        <!-- KEYWORTH CENTRE -->
         <a-entity position="-4.71 1.18 0.84" rotation="0 90 0">
           <a-text
             value="Keyworth"
@@ -76,13 +93,41 @@
             width="0.5"
             height="0.5"
             depth="0.1"
-            onclick="scene_3()"
+            onclick="goToKeyworth()"
             material=""
             geometry=""
             position="0.27 0.02 0"
             scale="2.01 0.61 1.53"></a-plane>
         </a-entity>
 
+        <!-- JavaScript function for Keyworth Centre -->
+        <script>
+          function goToKeyworth() {
+            // Define the action you want to perform when clicked, like navigating to a new page
+            window.location.href = "3keyworth.html";
+          }
+        </script>
+        <!-- Faraday -->
+        <a-entity position="-5 -0.5 2.5">
+          <a-text value="Faraday" color="black" text=""></a-text>
+          <a-plane
+            color="orange"
+            width="0.5"
+            height="0.5"
+            depth="0.1"
+            onclick="goToFaraday()"
+            material=""
+            geometry=""></a-plane>
+        </a-entity>
+
+        <!-- JavaScript function for Faraday -->
+        <script>
+          function goToFaraday() {
+            // Define the action you want to perform when clicked, like navigating to a new page
+            window.location.href = "4faraday.html";
+          }
+        </script>
+        <!-- Robot -->
         <a-entity position="-4.72 1.31 -1.91" rotation="0 90 0">
           <a-text
             value="Robot"
@@ -95,23 +140,22 @@
             width="0.5"
             height="0.5"
             depth="0.1"
-            onclick="scene_4()"
+            onclick="goToRobot()"
             material=""
             geometry=""
             position="-0.1 -0.12 0"
             scale="1.38 0.7 1"></a-plane>
         </a-entity>
-        <a-entity position="-5 -0.5 2.5">
-          <a-text value="Faraday" color="black" text=""></a-text>
-          <a-plane
-            color="orange"
-            width="0.5"
-            height="0.5"
-            depth="0.1"
-            onclick="scene_5()"
-            material=""
-            geometry=""></a-plane>
-        </a-entity>
+
+        <!-- JavaScript function for Robot -->
+        <script>
+          function goToRobot() {
+            // Define the action you want to perform when clicked, like navigating to a new page
+            window.location.href = "5.robotvideo.html";
+          }
+        </script>
+
+        <!-- Faraday (second instance) -->
         <a-entity position="-4.72 1.67 -0.37" rotation="0 90 0">
           <a-text value="Faraday" color="black" text="color: #ffffff"></a-text>
           <a-plane
@@ -119,12 +163,13 @@
             width="0.5"
             height="0.5"
             depth="0.1"
-            onclick="scene_5()"
+            onclick="goToFaraday()"
             material=""
             geometry=""
             position="0.41 0 0"
             scale="1.76 0.62 1"></a-plane>
         </a-entity>
+
         <a-entity position="-4.663 1.73 -2.4" rotation="0 90 0">
           <a-text
             value="Return Home"
@@ -136,57 +181,29 @@
             width="0.5"
             height="0.5"
             depth="0.1"
-            onclick="scene_6()"
+            onclick="returnHome()"
             material="color: #00ff40"
             geometry=""
             position="0.72 -0.01 0"
             scale="2.86 0.6 1"></a-plane>
         </a-entity>
-      </a-entity>
 
-      <a-camera position="1.20065 0.49281 -0.39881" rotation="0 90 0">
+        <script>
+          function returnHome() {
+            // Navigate to the home page (index.html)
+            window.location.href = "index.html";
+          }
+        </script>
+      </a-entity>
+      <a-camera
+        position="1.20065 0.49281 -0.39881"
+        rotation="0 90 0"
+        wasd-controls="
+    acceleration: 30;
+    easing: 20;">
         <!--Cursor Circle-->
         <a-cursor color="red"></a-cursor>
       </a-camera>
     </a-scene>
-
-    <!-- Scene switch script -->
-    <script type="text/javascript">
-      // Teleport to VR Menu scene
-      function scene_1() {
-        document.getElementById("vrmenu").setAttribute("visible", "true");
-        document.getElementById("vrwelcome").setAttribute("visible", "false");
-      }
-
-      // Teleport to Extension scene
-      function scene_2() {
-        document.getElementById("vrmenu").setAttribute("visible", "false");
-        document.getElementById("vrwelcome").setAttribute("visible", "true");
-      }
-
-      // Teleport to Keyworth scene
-      function scene_3() {
-        document.getElementById("vrmenu").setAttribute("visible", "false");
-        document.getElementById("vrwelcome").setAttribute("visible", "true");
-      }
-
-      // Teleport to Robot scene
-      function scene_4() {
-        document.getElementById("vrmenu").setAttribute("visible", "false");
-        document.getElementById("vrwelcome").setAttribute("visible", "true");
-      }
-
-      // Teleport to Faraday scene
-      function scene_5() {
-        document.getElementById("vrmenu").setAttribute("visible", "false");
-        document.getElementById("vrwelcome").setAttribute("visible", "true");
-      }
-
-      // Teleport to Return Home scene
-      function scene_6() {
-        document.getElementById("vrmenu").setAttribute("visible", "false");
-        document.getElementById("vrwelcome").setAttribute("visible", "true");
-      }
-    </script>
   </body>
 </html>
