--- a/aboutus.html
+++ b/aboutus.html
@@ -142,6 +142,9 @@
             <img src="..//pics/hub2landing.jpg" class="slide" />
             <img src="..//pics/hublanding.jpg" class="slide" />
             <img src="..//pics/keyworthlanding.jpg" class="slide" />
+            <img src="..//pics/faraday.jpg" class="slide" />
+            <img src="..//pics/Landing page.jpg" class="slide" />
+            <img src="..//pics/lsbuadmin.jpg" class="slide" />
           </div>
         </div>
       </div>
@@ -166,7 +169,7 @@
           slideIndex = 1;
         }
         slides[slideIndex - 1].style.display = "block";
-        setTimeout(showSlides, 5000); // Change image every 2 seconds
+        setTimeout(showSlides, 3000); // Change image every 2 seconds
       }
 
       showSlides();
