--- a/index.html
+++ b/index.html
@@ -10,46 +10,36 @@
         margin: 0;
         padding: 0;
         font-family: Arial, sans-serif;
-        background-image: url("pics/hub2landing.jpg");
+        background-image: url("/pics/hub2landing.jpg");
         background-size: cover;
         background-repeat: no-repeat;
       }
 
       .main-section {
-        background-color: rgba(
-          0,
-          0,
-          0,
-          0.5
-        ); /* Add background color with opacity */
+        background-color: rgba(0, 0, 0, 0.442);
         height: 100vh;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        position: relative; /* Add this to make it relative for absolute positioning */
-        color: white; /* Add this to ensure text is visible */
+        position: relative;
+        color: white;
       }
 
       .content {
         position: relative;
-        z-index: 1; /* Add this to ensure content is above the background */
+        z-index: 1;
         text-align: center;
       }
 
       nav {
-        background-color: rgba(
-          0,
-          0,
-          0,
-          0.5
-        ); /* Add background color with opacity */
+        background-color: rgba(0, 0, 0, 0.5);
         position: absolute;
         top: 0;
         width: 100%;
         padding: 10px 0;
         color: white;
-        z-index: 2; /* Ensure nav is above background image */
+        z-index: 2;
       }
 
       nav a {
@@ -57,6 +47,7 @@
         text-decoration: none;
         padding: 0 20px;
       }
+
       footer {
         background-color: rgba(0, 0, 0, 0.5);
         color: white;
@@ -79,26 +70,101 @@
         color: white;
         text-decoration: none;
         margin-right: 20px;
+        margin-left: 20px;
       }
 
-      /* Add a separate class for centering */
       .center {
         flex: 1;
-        text-align: center; /* Center text horizontally */
+        text-align: center;
       }
 
       .logo {
         position: absolute;
-        top: -100px; /* Adjust this value as needed */
+        top: -100px;
         left: 50%;
         transform: translateX(-50%);
-        z-index: 3; /* Ensure logo is above nav and footer */
+        z-index: 3;
         width: 300px;
       }
 
-      h1,
-      button {
-        margin-top: 20px; /* Adjust as needed */
+      h1 {
+        margin-top: 20px;
+      }
+
+      .button {
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: #cd2ca8;
+        color: white;
+        text-decoration: none;
+        border: none;
+        border-radius: 5px;
+        font-size: 16px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+        position: relative;
+        z-index: 1;
+      }
+
+      .button:hover {
+        background-color: rgba(139, 9, 109, 0.73);
+      }
+
+      /* Style the dropdown container */
+      .dropdown-container {
+        display: flex;
+        justify-content: space-around;
+        margin-top: 20px;
+      }
+
+      .dropbtn {
+        background-color: #cd2ca8;
+        color: white;
+        padding: 10px; /* Reduced padding */
+        text-decoration: none;
+        border: none;
+        border-radius: 5px;
+        font-size: 16px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+        position: relative;
+        z-index: 1;
+        width: auto; /* Set width to auto */
+        display: inline-block; /* Ensure button width adjusts dynamically */
+      }
+
+      /* Style the dropdown content */
+      .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 160px;
+        z-index: 1;
+        width: 150px;
+        text-align: left;
+      }
+
+      /* Style the links inside the dropdown */
+      .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+      }
+
+      /* Change color of dropdown links on hover */
+      .dropdown-content a:hover {
+        background-color: #f1f1f1;
+      }
+
+      /* Show the dropdown menu on hover */
+      .dropdown:hover .dropdown-content {
+        display: block;
+      }
+
+      /* Change the background color of the dropdown button when the dropdown content is shown */
+      .dropdown:hover .dropbtn {
+        background-color: rgba(139, 9, 109, 0.73);
       }
     </style>
   </head>
@@ -108,17 +174,38 @@
       <a href="/aboutus.html">About Us</a>
       <a href="/contactus.html">Contact Us</a>
     </nav>
-
     <div class="main-section">
       <div class="content">
         <img src=".//pics/lsbulogo1.png" class="logo" />
-
         <h1>Welcome London South Bank University VR Tour!</h1>
-        <a href="/vrhome.html" class="button"><button>Start VR Tour</button></a>
+        <a href="/vrhome.html" class="button">Start VR Tour</a>
+        <div class="dropdown-container">
+          <div class="dropdown">
+            <button class="dropbtn">360 Pictures</button>
+            <div class="dropdown-content">
+              <a href="/1hub.html">LSBU Hub</a>
+              <a href="/2extension.html">Extension Block</a>
+              <a href="/3keyworth.html">Keyworth Centre</a>
+              <a href="/4faraday.html">Farday Wing</a>
+            </div>
+          </div>
+          <div class="dropdown">
+            <button class="dropbtn">360 VR Tours</button>
+            <div class="dropdown-content">
+              <a href="/1.1hubvideo.html">LSBU HUB</a>
+              <a href="/2.2exvideo.html">Extension Block</a>
+              <a href="/3.3keyvideo.html">Keyworth Centre</a>
+              <a href="/4.4faradayvideo.html">Faraday Wing</a>
+              <a href="/5.robotvideo.html">Robot Tour</a>
+              <!-- Add more tour links as needed -->
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
     <footer>
+      <p>Powered By A-Framed</p>
       <p class="center">Developed By Team: Dimension Dreamers</p>
       <a href="#">Contact Us</a>
     </footer>
