--- a/vrhome.html
+++ b/vrhome.html
@@ -1,18 +1,239 @@
 <!DOCTYPE html>
-<html class="a-fullsceen" foxifeild>
+<html class="a-fullscreen">
   <head>
     <meta charset="UTF-8" />
     <script src="/aframe.js"></script>
+
     <title>VR Home Base</title>
   </head>
   <body>
     <a-scene>
-      <a-asset-item id="HomeVR" src="/scene.glb"></a-asset-item>
-            <a-entity id="scene1" position="0 -1 0" visible="true">
-        <a-gltf-model src="#location1" scale="1 1 1"></a-gltf-model>
+      <!-- Asset Items -->
+      <a-asset-item
+        id="HomeVR"
+        src="/assets/classroom_merged.glb"></a-asset-item>
 
-      <!--Player viewport-->
-      <a-camera position="0 0 0">
+      <a-entity id="vrmenu" position="0 -1 0" visible="">
+        <a-gltf-model
+          src="#HomeVR"
+          scale=""
+          gltf-model="/assets/classroom_merged.glb"></a-gltf-model>
+        <a-text
+          value="VR Menu"
+          position="-4.69 2.08 0.43"
+          color="black"
+          text=""
+          rotation="0 90 0"></a-text>
+        <a-text
+          value="Developed by Nabilah"
+          position="4.71 0.38307 -5.23"
+          color="black"
+          text=""
+          rotation="0 -90 0"></a-text>
+        <a-text
+          value="GitHub: Nabz-Raven"
+          position="4.69 0.73 -4.12"
+          color="black"
+          text=""
+          rotation="0 -90 0"></a-text>
+        <!--VR MENU BUTTONS-->
+        <!-- Hub -->
+        <a-entity
+          position="-4.708 1.22 3.13"
+          rotation="0 90 0"
+          scale="2.15 0.7 1">
+          <a-text
+            value="Hub"
+            color="black"
+            text="color: #ffffff"
+            scale="0.67 1.27 1.73"
+            position="-0.14 -0.03 0"></a-text>
+          <a-plane
+            color="blue"
+            width="0.5"
+            height="0.5"
+            depth="0.1"
+            onclick="navigateToNewEnvironment()"
+            material="color: #800080; emissive: #000000"
+            geometry="height: 0.53"></a-plane>
+        </a-entity>
+
+        <!-- JavaScript function for Hub -->
+        <script>
+          function navigateToNewEnvironment() {
+            window.location.href = "1hub.html"; // Replace '1hub.html' with the URL of your destination page
+          }
+        </script>
+
+        <!-- Extension -->
+        <a-entity position="-4.61 1.73 2.71" rotation="0 90 0" scale="1 1 1.03">
+          <a-text
+            value="Extension"
+            color="black"
+            text="color: #ffffff"
+            position="0.01 -0.02 -0.05"></a-text>
+          <a-plane
+            color="green"
+            width="0.5"
+            height="0.5"
+            depth="0.1"
+            onclick="goToExtension()"
+            material=""
+            geometry=""
+            position="0.52 -0.04 -0.07"
+            scale="2.06 0.59 0.14001"></a-plane>
+        </a-entity>
+
+        <!-- JavaScript function for Extension -->
+        <script>
+          function goToExtension() {
+            // Define the action you want to perform when clicked, like navigating to a new page
+            window.location.href = "2extension.html";
+          }
+        </script>
+
+        <!-- KEYWORTH CENTRE -->
+        <a-entity position="-4.71 1.18 0.84" rotation="0 90 0">
+          <a-text
+            value="Keyworth"
+            color="black"
+            text="color: #ffffff"
+            position="-0.2 0.03 0"
+            scale=""></a-text>
+          <a-plane
+            color="red"
+            width="0.5"
+            height="0.5"
+            depth="0.1"
+            onclick="goToKeyworth()"
+            material=""
+            geometry=""
+            position="0.27 0.02 0"
+            scale="2.01 0.61 1.53"></a-plane>
+        </a-entity>
+
+        <!-- JavaScript function for Keyworth Centre -->
+        <script>
+          function goToKeyworth() {
+            // Define the action you want to perform when clicked, like navigating to a new page
+            window.location.href = "3keyworth.html";
+          }
+        </script>
+        <!-- Faraday -->
+        <a-entity position="-5 -0.5 2.5">
+          <a-text value="Faraday" color="black" text=""></a-text>
+          <a-plane
+            color="orange"
+            width="0.5"
+            height="0.5"
+            depth="0.1"
+            onclick="goToFaraday()"
+            material=""
+            geometry=""></a-plane>
+        </a-entity>
+
+        <!-- JavaScript function for Faraday -->
+        <script>
+          function goToFaraday() {
+            // Define the action you want to perform when clicked, like navigating to a new page
+            window.location.href = "4faraday.html";
+          }
+        </script>
+        <!-- Robot -->
+        <a-entity position="-4.72 1.31 -1.91" rotation="0 90 0">
+          <a-text
+            value="Robot"
+            color="black"
+            text="color: #ffffff"
+            position="-0.42 -0.13 0.01"
+            scale=""></a-text>
+          <a-plane
+            color="yellow"
+            width="0.5"
+            height="0.5"
+            depth="0.1"
+            onclick="goToRobot()"
+            material=""
+            geometry=""
+            position="-0.1 -0.12 0"
+            scale="1.38 0.7 1"></a-plane>
+        </a-entity>
+
+        <!-- JavaScript function for Robot -->
+        <script>
+          function goToRobot() {
+            // Define the action you want to perform when clicked, like navigating to a new page
+            window.location.href = "5.robotvideo.html";
+          }
+        </script>
+
+        <!-- Faraday (second instance) -->
+        <a-entity position="-4.72 1.67 -0.37" rotation="0 90 0">
+          <a-text value="Faraday" color="black" text="color: #ffffff"></a-text>
+          <a-plane
+            color="orange"
+            width="0.5"
+            height="0.5"
+            depth="0.1"
+            onclick="goToFaraday()"
+            material=""
+            geometry=""
+            position="0.41 0 0"
+            scale="1.76 0.62 1"></a-plane>
+        </a-entity>
+
+        <a-entity position="-4.663 1.73 -2.4" rotation="0 90 0">
+          <a-text
+            value="Return Home"
+            color="black"
+            text="color: #ffffff"
+            position="0.08 0 0"></a-text>
+          <a-plane
+            color="purple"
+            width="0.5"
+            height="0.5"
+            depth="0.1"
+            onclick="returnHome()"
+            material="color: #00ff40"
+            geometry=""
+            position="0.72 -0.01 0"
+            scale="2.86 0.6 1"></a-plane>
+        </a-entity>
+
+        <script>
+          function returnHome() {
+            // Navigate to the home page (index.html)
+            window.location.href = "index.html";
+          }
+        </script>
+      </a-entity>
+
+      <a-asset>
+        <!-- Define the video asset and set it to mute -->
+        <video
+          id="vr-video"
+          src="/videos/London South Bank University.mp4"
+          autoplay
+          loop
+          muted></video>
+        <!-- Use the video in your scene -->
+      </a-asset>
+
+      <a-video
+        scr="#vr-video"
+        width="16"
+        height="9"
+        position="-0.42 0.55 -6.21"
+        scale="0.41 0.26 1">
+      </a-video>
+
+      <!--CAMERA-->
+      <a-camera
+        position="1.20065 0.49281 -0.39881"
+        rotation="0 90 0"
+        wasd-controls="
+    acceleration: 25;
+    easing: 10;">
         <!--Cursor Circle-->
         <a-cursor color="red"></a-cursor>
       </a-camera>
