--- a/1.1hubvideo.html
+++ b/1.1hubvideo.html
@@ -56,19 +56,12 @@
       <a-camera
         position="-4.590613364505865 1.53475 1.5126778969577817"
         rotation="-13.292620847035105 198.8163549103948 0"
-        wasd-controls="acceleration: 30"
-        data-aframe-inspector-original-camera=""
-        camera=""
-        look-controls="">
+        wasd-controls="acceleration: 25;
+    easing: 10;">
         <!--Cursor Circle-->
-        <a-cursor
-          color="red"
-          geometry=""
-          material=""
-          raycaster=""
-          cursor=""></a-cursor>
+        <a-cursor color="red"></a-cursor>
       </a-camera>
-      <div class="a-loader-title" style="display: none">360 Video</div></a-scene
-    >
+      <div class="a-loader-title" style="display: none">Hub 360 Video</div>
+    </a-scene>
   </body>
 </html>
