--- a/2extension.html
+++ b/2extension.html
@@ -58,10 +58,8 @@
       <a-camera
         position="1.20065 1.53475 -0.39881"
         rotation="-8.823550045014683 126.16530648780733 0"
-        wasd-controls="acceleration: 30"
-        data-aframe-inspector-original-camera=""
-        camera=""
-        look-controls="">
+        wasd-controls="acceleration: 25;
+    easing: 10;">
         <!--Cursor Circle-->
         <a-cursor color="red"></a-cursor>
       </a-camera>
