--- a/4.4faradayvideo.html
+++ b/4.4faradayvideo.html
@@ -57,17 +57,9 @@
       <a-camera
         position="-4.785529933986573 1.53475 -0.3775630385925675"
         rotation="0 122.56000000000002 0"
-        wasd-controls="acceleration: 30"
-        data-aframe-inspector-original-camera=""
-        camera=""
-        look-controls="">
+        wasd-controls="acceleration: 25; easing: 10;">
         <!--Cursor Circle-->
-        <a-cursor
-          color="red"
-          geometry=""
-          material=""
-          raycaster=""
-          cursor=""></a-cursor>
+        <a-cursor color="red" cursor=""></a-cursor>
       </a-camera>
 
       <div class="a-loader-title" style="display: none">
