--- a/4faraday.html
+++ b/4faraday.html
@@ -83,7 +83,7 @@
       <a-camera
         position="4.295623469172227 1.53475 4.745789224514679"
         rotation="-10.77160654845945 -148.96902673401405 0"
-        wasd-controls="acceleration: 30"
+        wasd-controls="acceleration: 25; easing: 10;"
         camera=""
         look-controls=""
         data-aframe-inspector-original-camera="">
@@ -98,10 +98,7 @@
       <div class="a-loader-title" style="display: none">
         Faraday 360 Picture
       </div>
-      <div class="a-loader-title" style="display: none">
-        Faraday 360 Pciture
-      </div></a-scene
-    >
+    </a-scene>
 
     <script>
       // Add event listener to the clickable plane
