--- a/5.robotvideo.html
+++ b/5.robotvideo.html
@@ -40,13 +40,17 @@
       <a-camera
         position="-4.590613364505865 1.53475 1.5126778969577817"
         rotation="-17.647100090029365 167.87663397333102 0"
-        wasd-controls="acceleration: 30"
+        wasd-controls="acceleration: 25;
+    easing: 10;"
         data-aframe-inspector-original-camera=""
         camera=""
         look-controls="">
         <!--Cursor Circle-->
         <a-cursor color="red"></a-cursor>
       </a-camera>
+      <div class="a-loader-title" style="display: none">
+        Robot Tour 360 Video
+      </div>
     </a-scene>
   </body>
 </html>
