--- a/2.2exvideo.html
+++ b/2.2exvideo.html
@@ -19,9 +19,7 @@
           depth="1"
           height="1"
           width="1"
-          onclick="window.location.href = '/vrhome.html';"
-          material=""
-          geometry=""></a-box>
+          onclick="window.location.href = '/vrhome.html';"></a-box>
         <a-text
           value="Back to Menu"
           color="white"
@@ -36,9 +34,7 @@
           depth="1"
           height="1"
           width="1"
-          onclick="window.location.href = '/2extension.html';"
-          material=""
-          geometry=""></a-box>
+          onclick="window.location.href = '/2extension.html';"></a-box>
         <a-text
           value="Back to 360 picture"
           color="white"
@@ -49,23 +45,13 @@
       <a-camera
         position="-4.590613364505865 1.53475 1.5126778969577817"
         rotation="-17.647100090029365 167.87663397333102 0"
-        wasd-controls="acceleration: 30"
-        data-aframe-inspector-original-camera=""
-        camera=""
-        look-controls="">
+        wasd-controls="acceleration: 25; easing: 10;">
         <!--Cursor Circle-->
-        <a-cursor
-          color="red"
-          geometry=""
-          material=""
-          raycaster=""
-          cursor=""></a-cursor>
+        <a-cursor color="red"></a-cursor>
       </a-camera>
-      <div class="a-loader-title" style="display: none">360 Video</div>
-      <div class="a-loader-title" style="display: none">LSBU HUb 360 Video</div>
       <div class="a-loader-title" style="display: none">
-        LSBU HUb 360 Video
-      </div></a-scene
-    >
+        Extension 360 Video
+      </div>
+    </a-scene>
   </body>
 </html>
