--- a/3.3keyvideo.html
+++ b/3.3keyvideo.html
@@ -57,20 +57,11 @@
       <a-camera
         position="-4.590613364505865 1.53475 1.5126778969577817"
         rotation="-17.647100090029365 167.87663397333102 0"
-        wasd-controls="acceleration: 30"
-        data-aframe-inspector-original-camera=""
-        camera=""
-        look-controls="">
+        wasd-controls="acceleration: 25; easing: 10;">
         <!--Cursor Circle-->
-        <a-cursor
-          color="red"
-          geometry=""
-          material=""
-          raycaster=""
-          cursor=""></a-cursor>
+        <a-cursor color="red"></a-cursor>
       </a-camera>
-      <div class="a-loader-title" style="display: none">360 Video</div>
-      <div class="a-loader-title" style="display: none">LSBU HUb 360 Video</div>
+
       <div class="a-loader-title" style="display: none">
         Keyworth Centre 360 Video
       </div></a-scene
