--- a/1hub.html
+++ b/1hub.html
@@ -48,16 +48,25 @@
 
       <a-entity position="-2.97 -0.06 -5.44047" rotation="0.36 27.8 0">
         <a-box
-          color="red"
           depth="1"
           height="1"
           width="1"
-          onclick="window.location.href = '/vrhome.html';"></a-box>
+          onclick="window.location.href = '/vrhome.html';">
+          <!-- Add animation to the box -->
+          <a-animation
+            attribute="material.src"
+            dur="2000"
+            to="url(pics/box.gif)"
+            direction="alternate"
+            repeat="indefinite">
+          </a-animation>
+        </a-box>
         <a-text
           value="Back to Menu"
           color="white"
           position="-0.7 0.68 0"
-          text=""></a-text>
+          text="">
+        </a-text>
       </a-entity>
 
       <a-camera
