--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="/aframe.js"></script>
-    <title>VR Tour</title>
+    <title>LSBU VR Tour</title>
     <style>
       body {
         margin: 0;
@@ -47,7 +47,7 @@
         text-decoration: none;
         padding: 0 20px;
       }
-
+      /*FOOTER*/
       footer {
         background-color: rgba(0, 0, 0, 0.5);
         color: white;
@@ -66,6 +66,12 @@
         margin: 0;
       }
 
+      footer p:first-child {
+        margin-right: 20px; /* Add right margin */
+        padding-left: 20px; /* Add left padding */
+        padding-right: 20px; /* Add right padding */
+      }
+
       footer a {
         color: white;
         text-decoration: none;
@@ -77,11 +83,12 @@
         flex: 1;
         text-align: center;
       }
+      /*End of FOOTER*/
 
       .logo {
         position: absolute;
         top: -100px;
-        left: 50%;
+        left: 49%;
         transform: translateX(-50%);
         z-index: 3;
         width: 300px;
