--- a/vrhome.html
+++ b/vrhome.html
@@ -9,14 +9,16 @@
   <body>
     <a-scene>
       <!-- 3D-Model -->
+      <!--CLASSROOM-->
       <a-asset-item
         id="HomeVR"
         src="/assets/classroom_merged.glb"></a-asset-item>
       <!--IMAGES-->
       <a-image
-        src="/pics/lsbulogo1.png"
-        position="x y z"
-        scale="x y z"></a-image>
+        src="/pics/lsbulogo.jpg"
+        rotation="0 -90 0"
+        position="4.72 0.87 1.35"
+        scale="5.6 1.8 1"></a-image>
       <a-entity id="vrmenu" position="0 -1 0" visible="">
         <a-gltf-model
           src="#HomeVR"
