--- a/vrhome.html
+++ b/vrhome.html
@@ -242,7 +242,7 @@
         rotation="0 -90 0"
         position="4.72 0.87 1.35"
         scale="5.6 1.8 1"></a-image>
-
+      <!--SLIDESHOW IMAGES-->
       <a-entity>
         <a-plane
           id="imagePlane"
