--- a/3keyworth.html
+++ b/3keyworth.html
@@ -54,11 +54,11 @@
 
       <a-entity position="6.85 0.93 -5.28047" rotation="0.36 -29.43 0">
         <a-box
-          color="red"
           depth="1"
           height="1"
           width="1"
-          onclick="window.location.href = '/vrhome.html';"></a-box>
+          onclick="window.location.href = '/vrhome.html';"
+          material="src:pics/box.gif"></a-box>
         <a-text
           value="Back to Menu"
           color="white"
