--- a/4.4faradayvideo.html
+++ b/4.4faradayvideo.html
@@ -17,19 +17,14 @@
         src="/videos/Faraday.mp4"
         autoplay="true"
         loop="true"
-        muted="true"
-        material=""
-        geometry=""
-        position=""></a-videosphere>
+        muted="true"></a-videosphere>
       <a-entity position="-3.58129 -0.43 -7.41" rotation="0.07 0 0">
         <a-box
-          color="red"
           depth="1"
           height="1"
           width="1"
           onclick="window.location.href = '/vrhome.html';"
-          material=""
-          geometry=""></a-box>
+          material="src:pics/box.gif"></a-box>
         <a-text
           value="Back to Menu"
           color="white"
@@ -40,12 +35,11 @@
       <!-- Add a clickable object to go back to the picture -->
       <a-entity position="-9.74719 -0.47 -3.48" rotation="5.12 64.22 0">
         <a-box
-          color="blue"
           depth="1"
           height="1"
           width="1"
           onclick="window.location.href = '/4faraday.html';"
-          material=""
+          material="src:pics/box1.gif"
           geometry=""></a-box>
         <a-text
           value="Back to 360 picture"
