--- a/4faraday.html
+++ b/4faraday.html
@@ -64,12 +64,11 @@
 
       <a-entity position="6.85 0.93 11.39295" rotation="0.36 -148.04 0">
         <a-box
-          color="red"
           depth="1"
           height="1"
           width="1"
           onclick="window.location.href = '/vrhome.html';"
-          material=""
+          material="src:pics/box.gif"
           geometry=""></a-box>
         <a-text
           value="Back to Menu"
