--- a/5.robotvideo.html
+++ b/5.robotvideo.html
@@ -23,12 +23,11 @@
         position=""></a-videosphere>
       <a-entity position="3.93 1.42 1.19" rotation="0.36 260 0">
         <a-box
-          color="red"
           depth="1"
           height="1"
           width="1"
           onclick="window.location.href = '/vrhome.html';"
-          material=""
+          material="src:pics/box.gif"
           geometry=""></a-box>
         <a-text
           value="Back to Menu"
