--- a/1.1hubvideo.html
+++ b/1.1hubvideo.html
@@ -22,29 +22,26 @@
         geometry=""></a-videosphere>
       <a-entity position="-2.97 -0.06 5.86" rotation="0.36 140 0">
         <a-box
-          color="red"
           depth="1"
           height="1"
           width="1"
           onclick="window.location.href = '/vrhome.html';"
-          material=""
+          material="src:/pics/box.gif"
           geometry=""></a-box>
         <a-text
           value="Back to Menu"
           color="white"
-          position="-0.7 0.68 0"
-          text=""></a-text>
+          position="-0.7 0.68 0"></a-text>
       </a-entity>
 
       <!-- Add a clickable object to go back to the picture -->
       <a-entity position="-4.61 -0.22 4.62" rotation="0.59 130 0">
         <a-box
-          color="blue"
           depth="1"
           height="1"
           width="1"
           onclick="window.location.href = '/1hub.html';"
-          material=""
+          material="src:pics/box1.gif"
           geometry=""></a-box>
         <a-text
           value="Back to 360 picture"
