--- a/2extension.html
+++ b/2extension.html
@@ -43,11 +43,11 @@
 
       <a-entity position="-2.97 -0.06 -5.44047" rotation="0.36 27.8 0">
         <a-box
-          color="red"
           depth="1"
           height="1"
           width="1"
-          onclick="window.location.href = '/vrhome.html';"></a-box>
+          onclick="window.location.href = '/vrhome.html';"
+          material="src:pics/box.gif"></a-box>
         <a-text
           value="Back to Menu"
           color="white"
