--- a/3.3keyvideo.html
+++ b/3.3keyvideo.html
@@ -23,13 +23,11 @@
         position=""></a-videosphere>
       <a-entity position="3.93 1.42 1.19" rotation="0.36 260 0">
         <a-box
-          color="red"
           depth="1"
           height="1"
           width="1"
           onclick="window.location.href = '/vrhome.html';"
-          material=""
-          geometry=""></a-box>
+          material="src:pics/box.gif"></a-box>
         <a-text
           value="Back to Menu"
           color="white"
@@ -40,13 +38,11 @@
       <!-- Add a clickable object to go back to the picture -->
       <a-entity position="-0.1 1.21 8.91" rotation="0.59 178.22 0">
         <a-box
-          color="blue"
           depth="1"
           height="1"
           width="1"
           onclick="window.location.href = '/3keyworth.html';"
-          material=""
-          geometry=""></a-box>
+          material="src:pics/box1.gif"></a-box>
         <a-text
           value="Back to 360 picture"
           color="white"
