--- a/4.4faradayvideo.html
+++ b/4.4faradayvideo.html
@@ -16,8 +16,7 @@
       <a-videosphere
         src="/videos/Faraday.mp4"
         autoplay="true"
-        loop="true"
-        muted="true"></a-videosphere>
+        loop="true"></a-videosphere>
       <a-entity position="-3.58129 -0.43 -7.41" rotation="0.07 0 0">
         <a-box
           depth="1"
